# keyhaven

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.kiro/specs/keyhaven/: design.md  requirements.md  tasks.md
.kiro/steering/: release-workflow.md
docs/: keyhaven-devops-handbook.html
src/: App.svelte  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/catalog/: services-catalog.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  entries.rs  error.rs  generator.rs  lib.rs  main.rs  model.rs
src-tauri/src/catalog/: mod.rs
src-tauri/src/crypto/: envelope.rs  mod.rs
src-tauri/src/session/: auto_lock.rs  mod.rs
src-tauri/src/vault/: header.rs  mod.rs  repository.rs
src/lib/: api.ts  types.ts  updater.ts  validation.ts
src/lib/components/: EntryCard.svelte  FieldRow.svelte  Modal.svelte  PasswordGenerator.svelte  PasswordGenerator.test.ts  Select.svelte  ServiceIcon.svelte  ServicePicker.svelte  ServicePicker.test.ts  Toast.svelte  VirtualList.svelte
src/lib/design/: global.css  tokens.css
src/lib/stores/: catalog.ts  entries.ts  navigation.ts  searchQuery.test.ts  searchQuery.ts  session.test.ts  session.ts  settings.ts  toast.ts
src/test/: setup.ts  tauri-mocks.ts
src/views/: EntryEditor.svelte  EntryEditor.test.ts  Recovery.svelte  Settings.svelte  Setup.svelte  Unlock.svelte  Vault.svelte
tools/: build-catalog.mjs  gen-source-icon.mjs  release-notes.mjs  release.mjs
